<resources>
    <string name="app_name">UTrivia</string>
    <string name="action_settings">Settings</string>
    <string name="top_scores">Top HighScores</string>
    <string name="back">Back</string>
    <string name="start_game">Start Game</string>
    <string name="end_game">End Game</string>
    <string name="new_score">You Scored:</string>
    <string name="next">Next</string>
    <string name="lifeline">Lifeline</string>
    <string name="logo">logo</string>
    <string name="enterinput">Enter Name</string>
    <string name="name">Name</string>
    <string name="ToHome">To Home</string>
    <string name="how_to">How-To</string>
    <string-array name="sound_choice">
        <item>on</item>
        <item>off</item>
    </string-array>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="mute_sound">Sound on/off</string>

    
    <string name="intro">Welcome to Utriva. This game will challenge you about the various facts and knowledge of UT Austin. Attempt all questions for the highest possible score.</string>
    <string name="lifeline_talk">You also have the option of using a "Lifeline" in which two of the incorrect answer choices will disappear at the cost of 3 coins to your reward.</string>
    <string name="basic_rules">There are 15 multiple choice questions. When you got your answer selected, hit the NEXT button to be taken to the next question. Each question right is 5 coins added to your score.</string>
    <string name="highscore_rules">Top 5 highscores are recorded</string>
</resources>

