<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/rules"
        android:layout_below="@id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basic_rules"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lifeline"
        android:layout_below="@id/rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lifeline_talk"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/highscore_rules"
        android:layout_below="@id/lifeline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highscore_rules"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="toHome"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button" />

</RelativeLayout>