<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs371m.utrivia.HomePage"
    tools:showIn="@layout/activity_home_page"
    android:background="@drawable/utcampus">

    <!-- Image is too big with white background-->
    <ImageView
        android:id="@+id/logo_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:onClick="startGame"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp" />


    <Button
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/top_scores"
        android:onClick="toHighscores"
        android:textSize="20dp"
        android:layout_below="@+id/start_button"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
